lintian (2.2.11) UNRELEASED; urgency=low

  * Summary of tag changes:
    + Added:
      - non-free-flash
      - section-area-mismatch
    + Removed:
      - section-category-mismatch

  * checks/binaries.desc:
    + [ADB] Extend the description of spelling-error-in-binary to mention
      that misspelt words are always output in lower case, and give some
      suggestions for finding the error oneself.  Thanks, Raphael Geissert
      and Paul Gevers.  (Closes: #526435)
    + [RA] Downgrade certainty of tags for which we recommend overrides.
      Patch from Raphael Geissert.  (Closes: #530008)
  * checks/control-file{,.desc}:
    + [ADB] Refer to main, contrib and non-free as archive areas rather
      than categories.
    + [ADB] Rename section-category-mismatch to section-area-mismatch.
    + [ADB] Update the description of section-area-mismatch to clarify
      that source packages in main may build binary packages in contrib.
    + [RA] Skip duplicate description checks for udeb packages.  Thanks,
      Thijs Kinkhorst.  (Closes: #529924)
  * checks/cruft{,.desc}:
    + [RA] Downgrade certainty of tags for which we recommend overrides.
      Patch from Raphael Geissert.
    + [RA] When looking for tar errors from dpkg-source, ignore gpgv
      output as well as gpg output.
  * checks/debhelper.desc:
    + [ADB] Correct Unpack-Level to 1.  Thanks, Raphael Geissert.
  * checks/fields{,.desc}:
    + [RA] Allow python << dependencies without Python-Version if the
      package depends on python-support, which doesn't use the
      Python-Version field.  Adjust the long description of
      old-versioned-python-dependency to make it clearer it only applies
      to python-central.  Thanks, Bernd Zeimetz.  (Closes: #525997)
    + [ADB] Refer to contrib and non-free as "archive areas" rather than
      distributions.
    + [ADB] Accept Architecture fields in .dsc files which contain both
      "all" and one or more binary architectures.  (Closes: #530565)