@@ -8,7 +8,8 @@ Test-For:
  duplicate-long-description
  duplicate-short-description
  missing-comma-after-substvar
+ missing-comma-between-items
  no-section-field-for-source
  package-depends-on-itself
  stronger-dependency-implies-weaker
-References: Debian Bug#30020, Debian Bug#409099
+References: Debian Bug#30020, Debian Bug#409099, Debian Bug#516706
